[tool.poetry]
name = "ssh-research"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ssh_research"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
